--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2264,7 +2264,7 @@ input, select, textarea {
 	}
 
 		header.major:after {
-			background: #e44c65;
+			background: #de0024;
 			content: '';
 			display: inline-block;
 			height: 0.2em;
@@ -2333,7 +2333,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #e44c65;
+			border-color: #de0024;
 		}
 
 	select {
@@ -2436,7 +2436,7 @@ input, select, textarea {
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #e44c65;
+			border-color: #de0024;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -3217,7 +3217,7 @@ input, select, textarea {
 		}
 
 		.spotlight.style1 .content {
-			border-color: #e44c65;
+			border-color: #de0024;
 		}
 
 		.spotlight.style2 .content {
@@ -3279,7 +3279,7 @@ input, select, textarea {
 	}
 
 		.wrapper.style2 {
-			background: #e44c65;
+			background: #de0024;
 		}
 
 			.wrapper.style2 input[type="text"]:focus,
@@ -3314,7 +3314,7 @@ input, select, textarea {
 			.wrapper.style2 input[type="button"].primary,
 			.wrapper.style2 .button.primary {
 				background-color: #ffffff;
-				color: #e44c65 !important;
+				color: #de0024 !important;
 			}
 
 				.wrapper.style2 input[type="submit"].primary:hover, .wrapper.style2 input[type="submit"].primary:active,
@@ -3418,7 +3418,7 @@ input, select, textarea {
 			}
 
 			.dropotron > li.active > a, .dropotron > li.active > span {
-				color: #e44c65;
+				color: #de0024;
 			}
 
 		.dropotron.level-0 {
@@ -3510,7 +3510,7 @@ input, select, textarea {
 						}
 
 					#header nav ul li.active > a, #header nav ul li.active > span {
-						color: #e44c65;
+						color: #de0024;
 					}
 
 					#header nav ul li > ul {
@@ -4008,7 +4008,7 @@ input, select, textarea {
 					}
 
 					#titleBar .toggle:before {
-						background: #e44c65;
+						background: #de0024;
 						color: rgba(255, 255, 255, 0.5);
 						content: '\f0c9';
 						display: block;
