--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -160,6 +160,13 @@ input, select, textarea {
 			border: 0;
 		}
 
+
+	h1 {
+		font-size: 3em;
+		line-height: 1.5em;
+		letter-spacing: -0.025em;
+	}
+
 	h2 {
 		font-size: 3em;
 		line-height: 1.5em;
