--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -146,6 +146,7 @@ input, select, textarea {
 
 	p {
 		margin: 0 0 2em 0;
+		padding-left: 10px;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -153,6 +154,7 @@ input, select, textarea {
 		font-weight: 500;
 		line-height: 1em;
 		margin: 0 0 1em 0;
+		padding-left: 10px;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
