--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -167,6 +167,7 @@ input, select, textarea {
 		font-size: 3em;
 		line-height: 1.5em;
 		letter-spacing: -0.025em;
+		text-align: left !important;
 	}
 
 	h2 {
